--- a/LocalFinanceManager/Components/Layout/NavMenu.razor
+++ b/LocalFinanceManager/Components/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="bi bi-wallet-fill" aria-hidden="true"></span> Accounts
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="budgets">
+                <span class="bi bi-calculator-fill" aria-hidden="true"></span> Budget Plans
+            </NavLink>
+        </div>
     </nav>
 </div>
-
